use ArrayList instead of LinkedList in ParserImpl